Make switching states working

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "NodeKnockout 2016 Starter App",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/rumblex-community/nodeknockout-2016-starter",
-  "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"]
+    "name": "dumplings-nko2016",
+    "description": "Dumplings game for Node Knockout 2016",
+    "repository": "https://github.com/rumblex/nodeknockout2016-dumplings",
+    "logo": "",
+    "keywords": []
 }
