--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
+        "prestart": "npm run build",
         "start": "node index.js",
         "clear": "rm -rf node_modules/ npm-debug.log public/dist/ typings/",
         "build": "webpack --progress --profile",
         "watch": "webpack --progress -w",
-        "count": "find public/scripts -name '*.js' -not -path 'public/scripts/vendor*' | xargs wc -l | sort -r",
+        "count": "find public/scripts -name '*.js' | xargs wc -l | sort",
         "postinstall": "typings install"
     },
     "dependencies": {
@@ -20,13 +21,17 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/rumblex-community/nodeknockout-2016-starter"
+        "url": "https://github.com/rumblex/nodeknockout2016-dumplings"
     },
     "devDependencies": {
         "babel-core": "^6.18.2",
         "babel-loader": "^6.2.7",
+        "babel-preset-es2015": "^6.18.0",
+        "babel-preset-es2016": "^6.16.0",
+        "babel-preset-stage-0": "^6.16.0",
         "phaser": "^2.6.2",
         "script-loader": "^0.7.0",
+        "super-event-emitter": "^4.1.4",
         "typings": "^2.0.0",
         "webpack": "^1.13.3"
     }
