--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "babel-preset-es2015": "^6.18.0",
         "babel-preset-es2016": "^6.16.0",
         "babel-preset-stage-0": "^6.16.0",
+        "json-loader": "^0.5.4",
         "phaser": "^2.6.2",
         "script-loader": "^0.7.0",
         "super-event-emitter": "^4.1.4",
