Add CBRadio model

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "build": "webpack --progress --profile",
         "watch": "webpack --progress -w",
         "count": "find public/scripts -name '*.js' | xargs wc -l | sort",
-        "postinstall": "typings install"
+        "typings": "typings install"
     },
     "dependencies": {
         "express": "^4.13.3"
