--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "json-loader": "^0.5.4",
         "phaser": "^2.6.2",
         "script-loader": "^0.7.0",
+        "socket.io": "^1.3.7",
         "super-event-emitter": "^4.1.4",
         "typings": "^2.0.0",
+        "uuid": "^2.0.3",
         "webpack": "^1.13.3"
     },
     "engines": {
