--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "babel-preset-stage-0": "^6.16.0",
         "express": "^4.13.3",
         "json-loader": "^0.5.4",
+        "nodemon": "^1.11.0",
         "phaser": "^2.6.2",
         "script-loader": "^0.7.0",
         "socket.io": "^1.3.7",
