Fixed couting lines of code

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "clear": "rm -rf node_modules/ npm-debug.log public/dist/ typings/",
         "build": "webpack --progress --profile",
         "watch": "webpack --progress -w",
-        "count": "find public/scripts -name '*.js' | xargs wc -l | sort",
+        "count": "find app -name '*.js' | xargs wc -l | sort",
         "postinstall": "npm run build",
         "typings": "typings install"
     },
