--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "babel-preset-stage-0": "^6.16.0",
         "express": "^4.13.3",
         "json-loader": "^0.5.4",
+        "lodash": "^4.16.6",
         "phaser": "^2.6.2",
         "script-loader": "^0.7.0",
         "socket.io": "^1.3.7",
